[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cardinality_estimation"
version = "0.0.1"
description = "A Python package with multiple modules."
readme = "README.md"
authors = [
    { name = "Author", email = "author@tum.de" }
]
dependencies = [
    "async-timeout",
    "backcall",
    "cachetools",
    "entrypoints",
    "fqdn",
    "gensim",
    "gitpython",
    "hurry",
    "hurry.filesize",
    "importlib-metadata",
    "importlib-resources",
    "ipython-genutils",
    "isodate",
    "isoduration",
    "jsonpointer",
    "lxml",
    "matplotlib",
    "ml-collections",
    "notebook",
    "pandas",
    "pickleshare",
    "pkgutil-resolve-name",
    "pyodbc",
    "pyrsistent",
    "python-levenshtein",
    "python-louvain",
    "scikit-learn",
    "sparqlwrapper",
    "tensorflow",
    "tomlkit",
    "torch",
    "torch-cluster",
    "torch-geometric",
    "torch-scatter",
    "torch-sparse",
    "torch-spline-conv",
    "uri-template",
    "webcolors"
]

[tool.setuptools.packages.find]
where = ["src"]